Running spring boot application on Docker container